--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
     "ytdl-core": "^4.11.5"
   }
 }
